syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GRPCService";

package product;

service Product {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProducts (google.protobuf.Empty) returns (ProductList);
}

message ProductList {
	repeated CreateProductRequest products = 1;
}

message CreateProductRequest {
  string productName = 1;
  string productCode = 2;
  double price = 3;
  google.protobuf.Timestamp stockDate = 4;
}

message CreateProductResponse {
	int32 StatusCode = 1;
	bool IsSuccessful = 2;
}
